--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adonix</title>
     <meta http-equiv="refresh" content="0;url=https://github.com/adonix-org/">
+
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "fc115acaa59941e4a84bcb459a4aab8c"}'></script>
 </head>
 
 <body>
